--- a/calculator.html
+++ b/calculator.html
@@ -10,12 +10,32 @@
 <body>
     <div class="wrapper">
         <section class="screen">
-
+            0
         </section>
         <section class="calc-buttons">
+          <div class="calc-button-row">
 
+          </div>
+
+          <div class="calc-button-row">
+            <button class="calc-button">7</button>
+            <button class="calc-button">8</button>
+            <button class="calc-button">9</button>
+            <button class="calc-button">&times</button>
+          </div>
+
+          <div class="calc-button-row">
+
+          </div>
+
+          <div class="calc-button-row">
+
+          </div>
+
+          <div class="calc-button-row">
+
+          </div>
         </section>
     </div>
-    
 </body>
 </html>
